@@ -29,7 +29,7 @@ import java.util.stream.Collectors;
 @Service
 public class UserServiceImpl implements UserService {
     @Autowired
-    private UserRepo userRepository;
+    private UserRepo userRepo;
 
     @Autowired
     private PasswordEncoder passwordEncoder;
@@ -44,13 +44,13 @@ public class UserServiceImpl implements UserService {
     @Override
     public User saveUser(User user) {
         user.setPassword(passwordEncoder.encode(user.getPassword()));
-        return userRepository.save(user);
+        return userRepo.save(user);
     }
 
     // 管理员更新学生信息，更新用户密码无需输入旧的密码
     @Override
     public User updateStudent(User user) {
-        User existingUser = userRepository.findByUserCode(user.getUserCode()).orElseThrow(() -> new IllegalArgumentException("没有找到学生"));
+        User existingUser = userRepo.findByUserCode(user.getUserCode()).orElseThrow(() -> new IllegalArgumentException("没有找到学生"));
 
         existingUser.setUsername(user.getUsername());
         if (user.getPassword() != null && !user.getPassword().isEmpty()) {
@@ -66,19 +66,19 @@ public class UserServiceImpl implements UserService {
 
         existingUser.setClazz(user.getClazz());
 
-        return userRepository.save(existingUser);
+        return userRepo.save(existingUser);
     }
 
     // 根据用户编号获取用户
     @Override
     public User getByUserCode(String userCode) {
-        return userRepository.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("无法根据编号获取用户"));
+        return userRepo.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("无法根据编号获取用户"));
     }
 
     // 获取所有用户
     @Override
     public List<User> getAllUsers() {
-        return userRepository.findAll();
+        return userRepo.findAll();
     }
 
     // 管理员根据学生编号，批量删除
@@ -86,14 +86,14 @@ public class UserServiceImpl implements UserService {
     @Transactional
     public void deleteStudentsByUserCodes(List<String> userCodes) {
         for (String userCode : userCodes) {
-            User user = userRepository.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("无法根据编号获取用户"));
+            User user = userRepo.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("无法根据编号获取用户"));
             Clazz clazz = user.getClazz();
             if (clazz != null) {
                 clazz.getStudents().remove(user); // 从班级中移除学生
                 clazzRepo.save(clazz); // 保存班级信息
             }
         }
-        userRepository.deleteAllByUserCodeIn(userCodes);
+        userRepo.deleteAllByUserCodeIn(userCodes);
     }
 
     // 管理员批量删除教师信息
@@ -101,33 +101,33 @@ public class UserServiceImpl implements UserService {
     @Transactional
     public void deleteTeachersByUserCodes(List<String> userCodes) {
         for (String userCode : userCodes) {
-            User user = userRepository.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("无法根据编号获取用户"));
+            User user = userRepo.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("无法根据编号获取用户"));
             List<Course> courses = user.getCourses();
             if (courses != null && !courses.isEmpty()) {
                 throw new IllegalStateException("教师 " + user.getUsername() + " 有相关授课，无法删除");
             }
         }
-        userRepository.deleteAllByUserCodeIn(userCodes);
+        userRepo.deleteAllByUserCodeIn(userCodes);
     }
 
 
     // 用户更改密码
     @Override
     public User changePassword(String userCode, String oldPassword, String newPassword) {
-        User user = userRepository.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("更改密码时没有找到用户"));
+        User user = userRepo.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("更改密码时没有找到用户"));
 
         if (!passwordEncoder.matches(oldPassword, user.getPassword())) {
             throw new IllegalArgumentException("旧密码错误");
         }
 
         user.setPassword(passwordEncoder.encode(newPassword));
-        return userRepository.save(user);
+        return userRepo.save(user);
     }
 
     // Spring Security自带的登录验证方法，实际为通过userCode进行验证登录，而非username
     @Override
     public UserDetails loadUserByUsername(String userCode) throws UsernameNotFoundException {
-        User user = userRepository.findByUserCode(userCode).orElseThrow(() -> new UsernameNotFoundException("登录时没有找到用户"));
+        User user = userRepo.findByUserCode(userCode).orElseThrow(() -> new UsernameNotFoundException("登录时没有找到用户"));
         List<GrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole()));
         return new CustomUserDetails(user.getUsername(), user.getPassword(), user.getUserCode(), authorities);
     }
@@ -135,84 +135,72 @@ public class UserServiceImpl implements UserService {
     // 管理员根据条件获取学生
     @Override
     public Page<User> getStudentsByCondition(String userCode, String username, String clazzCode, Pageable pageable) {
-        Page<User> allUsersPage;
+        List<User> allStudents;
         if (userCode != null && !userCode.isEmpty()) {
             System.out.println("执行学生编号查询");
             // 若学生编号存在，则仅按学生编号查询
-            Optional<User> userOptional = userRepository.findByUserCode(userCode);
-            if (userOptional.isPresent()) {
-                List<User> userList = Collections.singletonList(userOptional.get());
-                allUsersPage = new PageImpl<>(userList, pageable, userList.size());
-            } else {
-                allUsersPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
-            }
-
-            System.out.println("学生编号查询到的用户数量：" + allUsersPage.getContent().size());
+            Optional<User> userOptional = userRepo.findByUserCode(userCode);
+            allStudents = userOptional.map(List::of).orElse(List.of());
         } else if ((username != null && !username.isEmpty()) && (clazzCode != null && !clazzCode.isEmpty())) {
             System.out.println("执行联合查询");
             // 用户名和班级编号联合查询
-            allUsersPage = userRepository.findByUsernameContainingAndClazz_ClassCode(username, clazzCode, pageable);
-            System.out.println("联合查询到的用户数量：" + allUsersPage.getContent().size());
+            allStudents = userRepo.findByUsernameContainingAndClazz_ClassCode(username, clazzCode);
         } else if (username != null && !username.isEmpty()) {
             System.out.println("执行用户名查询");
             // 按用户名查询
-            allUsersPage = userRepository.findByUsernameContaining(username, pageable);
-            System.out.println("用户名查询到的用户数量：" + allUsersPage.getContent().size());
+            allStudents = userRepo.findByUsernameContaining(username);
         } else if (clazzCode != null && !clazzCode.isEmpty()) {
             System.out.println("执行班级查询");
             // 按班级编号查询
-            allUsersPage = userRepository.findByClazz_ClassCode(clazzCode, pageable);
-            System.out.println("班级查询到的用户数量：" + allUsersPage.getContent().size());
+            allStudents = userRepo.findByClazz_ClassCode(clazzCode);
         } else {
             // 查询所有学生
-            allUsersPage = userRepository.findAll(pageable);
-            System.out.println("查询所有的用户数量：" + allUsersPage.getContent().size());
+            allStudents = userRepo.findAll();
         }
 
         // 过滤出角色为 STUDENT 的用户
-        List<User> studentList = allUsersPage.getContent().stream()
+        List<User> studentList = allStudents.stream()
                 .filter(user -> "STUDENT".equals(user.getRole()))
                 .collect(Collectors.toList());
 
-        System.out.println("过滤后学生数量：" + studentList.size());
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), studentList.size());
 
-        return new PageImpl<>(studentList, pageable, studentList.size());
+        return new PageImpl<>(studentList.subList(start, end), pageable, studentList.size());
     }
 
     // 管理员根据条件获取教师
     @Override
     public Page<User> getTeachersByCondition(String userCode, String username, String courseCode, Pageable pageable) {
-        Page<User> allUsersPage;
+        List<User> allTeachers;
         if (userCode != null && !userCode.isEmpty()) {
             // 若教师编号存在，则仅按教师编号查询
-            Optional<User> userOptional = userRepository.findByUserCode(userCode);
-            if (userOptional.isPresent()) {
-                List<User> userList = Collections.singletonList(userOptional.get());
-                allUsersPage = new PageImpl<>(userList, pageable, userList.size());
-            } else {
-                allUsersPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
-            }
+            Optional<User> userOptional = userRepo.findByUserCode(userCode);
+            allTeachers = userOptional.map(List::of).orElse(List.of());
         } else if (username != null && !username.isEmpty()) {
             // 按用户名查询
-            allUsersPage = userRepository.findByUsernameContaining(username, pageable);
+            allTeachers = userRepo.findByUsernameContaining(username);
         } else {
             // 查询所有教师
-            allUsersPage = userRepository.findAll(pageable);
-            System.out.println("查询所有的用户数量" + allUsersPage.getContent().size());
+            allTeachers = userRepo.findAll();
         }
 
         // 过滤出角色为TEACHER的用户
-        List<User> teacherList = allUsersPage.getContent().stream()
+        List<User> teacherList = allTeachers.stream()
                 .filter(user -> "TEACHER".equals(user.getRole()))
                 .collect(Collectors.toList());
 
-        return new PageImpl<>(teacherList, pageable, teacherList.size());
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), teacherList.size());
+
+        return new PageImpl<>(teacherList.subList(start, end), pageable, teacherList.size());
     }
+
 
     // 管理员更新教师信息
     @Override
     public User updateTeacher(User user) {
-        User existingUser = userRepository.findByUserCode(user.getUserCode()).orElseThrow(() -> new IllegalArgumentException("没有找到教师"));
+        User existingUser = userRepo.findByUserCode(user.getUserCode()).orElseThrow(() -> new IllegalArgumentException("没有找到教师"));
 
         existingUser.setUsername(user.getUsername());
         if (user.getPassword() != null && !user.getPassword().isEmpty()) {
@@ -226,20 +214,24 @@ public class UserServiceImpl implements UserService {
             existingUser.setRole(user.getRole());
         }
 
-        return userRepository.save(existingUser);
+        return userRepo.save(existingUser);
     }
 
     @Override
     public Page<User> getUnassignedStudents(Pageable pageable) {
         // 先查询出所有未分配班级的用户
-        Page<User> allUnassignedUsers = userRepository.findByClazzIsNull(pageable);
+        List<User> allUnassignedUsers = userRepo.findByClazzIsNull();
         // 过滤出角色为 STUDENT 的用户
-        List<User> unassignedStudents = allUnassignedUsers.getContent().stream()
+        List<User> unassignedStudents = allUnassignedUsers.stream()
                 .filter(user -> "STUDENT".equals(user.getRole()))
                 .collect(Collectors.toList());
-        // 返回过滤后的结果
-        return new PageImpl<>(unassignedStudents, pageable, unassignedStudents.size());
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), unassignedStudents.size());
+
+        return new PageImpl<>(unassignedStudents.subList(start, end), pageable, unassignedStudents.size());
     }
+
 
     @Override
     @Transactional
@@ -249,7 +241,7 @@ public class UserServiceImpl implements UserService {
 
         // 2. 根据学生编号列表查找对应的学生，并过滤出角色为 STUDENT 的用户
         List<User> students = userCodes.stream()
-                .map(userCode -> userRepository.findByUserCode(userCode)
+                .map(userCode -> userRepo.findByUserCode(userCode)
                         .filter(user -> "STUDENT".equals(user.getRole()))
                         .orElseThrow(() -> new IllegalArgumentException("未找到对应的学生或用户不是学生角色")))
                 .toList();
@@ -257,7 +249,7 @@ public class UserServiceImpl implements UserService {
         // 3. 遍历学生列表，将每个学生分配到指定班级
         for (User student : students) {
             student.setClazz(clazz);
-            userRepository.save(student);
+            userRepo.save(student);
         }
 
         // 4. 更新班级的学生列表
@@ -273,20 +265,20 @@ public class UserServiceImpl implements UserService {
     @Override
     @Transactional
     public void assignCoursesToTeacher(String userCode, List<String> courseCodes) {
-        User teacher = userRepository.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("没有找到教师"));
+        User teacher = userRepo.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("没有找到教师"));
         for (String courseCode : courseCodes) {
             Course course = courseRepo.findByCourseCode(courseCode).orElseThrow(() -> new IllegalArgumentException("没有找到课程"));
             course.setTeacher(teacher);
             teacher.getCourses().add(course);
             courseRepo.save(course);
         }
-        userRepository.save(teacher);
+        userRepo.save(teacher);
     }
 
     @Override
     @Transactional
     public void dissociateCoursesFromTeacher(String userCode, List<String> courseCodes) {
-        User teacher = userRepository.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("没有找到教师"));
+        User teacher = userRepo.findByUserCode(userCode).orElseThrow(() -> new IllegalArgumentException("没有找到教师"));
 
         for (String courseCode : courseCodes) {
             Course course = courseRepo.findByCourseCode(courseCode).orElseThrow(() -> new IllegalArgumentException("没有找到课程"));
@@ -295,6 +287,6 @@ public class UserServiceImpl implements UserService {
             courseRepo.save(course);
         }
 
-        userRepository.save(teacher);
+        userRepo.save(teacher);
     }
 }
